--- a/pre-build/html/layout/layout-flex-wrap.html
+++ b/pre-build/html/layout/layout-flex-wrap.html
@@ -11,7 +11,7 @@
             <div class="leftArea cScroll">
                 <ul class="leftMenu">
                     <li>
-                        <a href="../../html/main.html" title="메인으로">
+                        <a href="index.html" title="메인으로">
                             <img src="../../images/common/logo.png" class="lightLogo" alt="서브 메인로고">
                             <img src="../../images/common/main-logo-w.png" class="darkLogo" alt="서브 메인로고" />
                             <span class="hidden">메인으로</span>
