접근성 작업

--- a/pre-build/html/layout/layout-flex-basis.html
+++ b/pre-build/html/layout/layout-flex-basis.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" class="skel">
+<html lang="ko" class="no-display skel">
 
 <head>
     @@include('include/head.html')
@@ -11,7 +11,7 @@
             <div class="leftArea cScroll">
                 <ul class="leftMenu">
                     <li>
-                        <a href="index.html" title="메인으로">
+                        <a href="../index.html" title="메인으로">
                             <img src="../../images/common/logo.png" class="lightLogo" alt="서브 메인로고">
                             <img src="../../images/common/main-logo-w.png" class="darkLogo" alt="서브 메인로고" />
                             <span class="hidden">메인으로</span>
@@ -24,7 +24,7 @@
                     </li>
                     <li>
                         <span>
-                            <a href="#none" title="Header">Header
+                            <a href="javascript:void(0)" title="Header">Header
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -47,7 +47,7 @@
                     </li>
                     <li>
                         <span>
-                            <a href="#none" title="GNB">GNB
+                            <a href="javascript:void(0)" title="GNB">GNB
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -74,7 +74,7 @@
                     </li>
                     <li>
                         <span>
-                            <a href="#none" title="Footer">Footer
+                            <a href="javascript:void(0)" title="Footer">Footer
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -92,7 +92,7 @@
                     </li>
                     <li class="active">
                         <span>
-                            <a href="#none" title="Layout">Layout
+                            <a href="javascript:void(0)" title="Layout">Layout
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -176,7 +176,7 @@
                     </li>
                     <li>
                         <span>
-                            <a href="#none" title="Input">Input
+                            <a href="javascript:void(0)" title="Input">Input
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -203,7 +203,7 @@
                     </li>
                     <li>
                         <span>
-                            <a href="#none" title="Scroll element">Scroll element
+                            <a href="javascript:void(0)" title="Scroll element">Scroll element
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -223,7 +223,7 @@
                     </li>
                     <li>
                         <span>
-                            <a href="#none" title="Custom">Custom
+                            <a href="javascript:void(0)" title="Custom">Custom
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -244,7 +244,7 @@
                     </li>
                     <li>
                         <span>
-                            <a href="#none" title="Popup">Popup
+                            <a href="javascript:void(0)" title="Popup">Popup
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -266,7 +266,7 @@
                     </li>
                     <li>
                         <span>
-                            <a href="#none" title="Etc">Etc
+                            <a href="javascript:void(0)" title="Etc">Etc
                                 <svg viewBox="0 0 700 700">
                                     <path
                                         d="m350 446.25c-4.4805 0-8.9609-1.7148-12.371-5.1289l-245-245c-6.8438-6.8438-6.8438-17.902 0-24.746l52.5-52.5c6.8438-6.8438 17.902-6.8438 24.746 0l180.12 180.13 180.13-180.12c6.8438-6.8438 17.902-6.8438 24.746 0l52.5 52.5c6.8438 6.8438 6.8438 17.902 0 24.746l-245 245c-3.4141 3.4102-7.8945 5.125-12.375 5.125z" />
@@ -520,6 +520,9 @@
             </button>
         </div>
     </div>
+    <script>
+        fouc(document.documentElement);
+      </script>
 </body>
 
 </html>
