--- a/pre-build/scss/common/main.scss
+++ b/pre-build/scss/common/main.scss
@@ -1,8 +1,9 @@
 @import '../common/variable.scss';
 
 #wrap.main{padding-top: 70px;
-    #header{width: 100%; height: 70px; top: 0; left: 0; position: fixed; border-bottom: 1px solid $dddBg; 
+    #header{width: 100%; height: 70px; top: 0; left: 0; position: absolute; border-bottom: 1px solid $dddBg; 
     background-color: $whiteBg; z-index: 100; padding: 0 20px; box-sizing: border-box;
+        &.fixed{position: fixed; animation: fixHeader 0.2s;}
         >.inner{max-width: 1440px; margin: 0 auto; height: 100%; display: flex; align-items: center;
             .logoArea,.menuArea{height: inherit; display: flex; align-items: center;}
             .logoArea{
@@ -212,3 +213,12 @@
 }
 
 .web{display: block;}
+
+@keyframes fixHeader {
+    0%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
