--- a/pre-build/scss/component/etc.scss
+++ b/pre-build/scss/component/etc.scss
@@ -82,4 +82,17 @@
             }
         }
     }
+
+    &.wave{position: relative;
+        .divWave{position: absolute; bottom: 0; left: 0; width: 100%; height: 100%; z-index: 1;
+        background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg"); background-repeat: repeat-x; background-position: 0px bottom; 
+        background-size: 1920px auto; overflow: hidden; opacity: 0.7; animation-name: wave; animation-duration: 50s; animation-iteration-count: infinite;
+        animation-timing-function: linear;
+        }
+    }
+}
+
+@keyframes wave {
+    0%{background-position: 0px bottom;}
+    100%{background-position: 1920px bottom;}
 }
