--- a/pre-build/scss/scss-build/main.css
+++ b/pre-build/scss/scss-build/main.css
@@ -11,13 +11,19 @@
   height: 70px;
   top: 0;
   left: 0;
-  position: fixed;
+  position: absolute;
   border-bottom: 1px solid #ddd;
   background-color: #fff;
   z-index: 100;
   padding: 0 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+#wrap.main #header.fixed {
+  position: fixed;
+  -webkit-animation: fixHeader 0.2s;
+          animation: fixHeader 0.2s;
 }
 
 #wrap.main #header > .inner {
@@ -66,6 +72,7 @@
 }
 
 #wrap.main #header > .inner .menuArea ul li {
+  position: relative;
   height: inherit;
   line-height: 68px;
 }
@@ -77,11 +84,58 @@
   color: #000;
 }
 
+#wrap.main #header > .inner .menuArea ul li .subNav {
+  display: none;
+  position: absolute;
+  top: 59px;
+  left: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 120px;
+  height: 120px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 0 5px 2px rgba(221, 221, 221, 0.5);
+          box-shadow: 0 0 5px 2px rgba(221, 221, 221, 0.5);
+  background-color: #fff;
+}
+
+#wrap.main #header > .inner .menuArea ul li .subNav li {
+  width: 100%;
+  text-align: center;
+  line-height: 40px;
+  height: auto;
+}
+
+#wrap.main #header > .inner .menuArea ul li .subNav li > a {
+  font-size: 14px;
+}
+
+#wrap.main #header > .inner .menuArea ul li .subNav li + li {
+  margin: 0;
+}
+
+#wrap.main #header > .inner .menuArea ul li .subNav li:hover {
+  background-color: rgba(221, 221, 221, 0.5);
+}
+
+#wrap.main #header > .inner .menuArea ul li:last-of-type:hover .subNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 #wrap.main #header > .inner .menuArea ul li + li {
   margin-left: 30px;
 }
 
+#wrap.main #header > .inner .mobileSide {
+  display: none;
+}
+
 #wrap.main #sideBar {
+  display: none;
   position: fixed;
   top: 0;
   right: -280px;
@@ -278,7 +332,7 @@
 }
 
 #wrap.main .mainContainer .section.reverse .lt {
-  margin-left: 60px;
+  margin-left: 0;
 }
 
 #wrap.main .mainContainer .section:first-of-type {
@@ -292,7 +346,6 @@
 #wrap.main #footer {
   width: 100%;
   height: 130px;
-  padding: 0 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-color: #F8F8F8;
@@ -304,7 +357,9 @@
   display: flex;
   max-width: 1000px;
   margin: 0 auto;
-  padding-top: 23px;
+  padding: 23px 20px 0 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 #wrap.main #footer > .inner .info {
@@ -348,16 +403,16 @@
 
 @media screen and (max-width: 930px) {
   #wrap.main .mainContainer .introArea .desc {
-    font-size: 16px;
+    font-size: 1em;
   }
   #wrap.main .mainContainer .introArea h2 strong {
-    font-size: 34px;
+    font-size: 2.125em;
   }
   #wrap.main .mainContainer .section .lt .titArea, #wrap.main .mainContainer .section .rt .titArea {
-    font-size: 32px;
+    font-size: 2em;
   }
   #wrap.main .mainContainer .section .lt .titArea + .bottomTxt, #wrap.main .mainContainer .section .rt .titArea + .bottomTxt {
-    font-size: 16px;
+    font-size: 1em;
   }
   #wrap.main .mainContainer .section .lt .imgBox img, #wrap.main .mainContainer .section .rt .imgBox img {
     max-width: 400px;
@@ -366,6 +421,38 @@
 }
 
 @media screen and (max-width: 768px) {
+  #wrap.main #sideBar {
+    display: block;
+  }
+  #wrap.main #sideBar ul li .sideBarSubNav {
+    display: none;
+    padding: 15px 10px 0 10px;
+    border-bottom: 0;
+  }
+  #wrap.main #sideBar ul li .sideBarSubNav li {
+    font-size: 0.813em;
+  }
+  #wrap.main #sideBar ul li .sideBarSubNav li + li {
+    margin-top: 10px;
+  }
+  #wrap.main #sideBar ul li:last-child a {
+    position: relative;
+  }
+  #wrap.main #sideBar ul li:last-child a svg {
+    position: absolute;
+    top: 5px;
+    left: 40px;
+    width: 16px;
+    height: 16px;
+  }
+  #wrap.main #sideBar ul li:last-child a.active svg {
+    top: 1.5px;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  #wrap.main #sideBar ul li:last-child a.active ~ .sideBarSubNav {
+    display: block;
+  }
   #wrap.main #header > .inner .logoArea {
     -webkit-box-flex: 1;
         -ms-flex: 1;
@@ -374,13 +461,19 @@
   #wrap.main #header > .inner .menuArea {
     display: none;
   }
+  #wrap.main #header > .inner .menuArea ul li .subNav {
+    display: none;
+  }
+  #wrap.main #header > .inner .mobileSide {
+    display: block;
+  }
   #wrap.main #visualArea > .inner .centerTxt h1 p {
     font-size: 28px;
   }
   #wrap.main #visualArea > .inner .centerTxt .btnStarted {
     width: 110px;
     height: 40px;
-    font-size: 14px;
+    font-size: 0.875em;
   }
   #wrap.main #visualArea > .inner .centerTxt .btnStarted svg {
     width: 10px;
@@ -429,6 +522,83 @@
   }
   #wrap.main .mainContainer .section + .section {
     padding-top: 200px;
+  }
+  #wrap.main #footer > .inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  #wrap.main #footer > .inner .info {
+    margin-left: 0;
+  }
+  #wrap.main #footer > .inner .info ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #wrap.main #footer > .inner .info ul li a {
+    font-size: 0.75em;
+  }
+  #wrap.main #footer > .inner .social {
+    padding-top: 15px;
+  }
+  #wrap.main #footer > .inner .social ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .web {
+    display: none !important;
+  }
+  #wrap.main #visualArea > .inner {
+    padding: 0 20px;
+  }
+  #wrap.main #visualArea > .inner .centerTxt h1 p {
+    font-size: 1.5em;
+  }
+  #wrap.main .mainContainer .section .lt .titArea, #wrap.main .mainContainer .section .rt .titArea {
+    font-size: 1.625em;
+  }
+  #wrap.main .mainContainer .section .lt .titArea + .bottomTxt, #wrap.main .mainContainer .section .rt .titArea + .bottomTxt {
+    margin-top: 8px;
+    font-size: 0.875em;
+  }
+  #wrap.main .mainContainer .introArea .desc {
+    font-size: 0.813em;
+  }
+  #wrap.main .mainContainer .introArea h2 strong {
+    font-size: 1.75em;
+  }
+}
+
+.web {
+  display: block;
+}
+
+@-webkit-keyframes fixHeader {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes fixHeader {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 /*# sourceMappingURL=main.css.map */
