--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -109,9 +109,9 @@ body{
   --c-333-white: #333;
 
   /* sc */
-  --d-sc-thumb: #ccc;
-  --d-sc-track: #e9e9e9;
-  --d-sc-hv-thumb: #b6b6b6;
+  --d-sc-thumb: #D3D1CB;
+  --d-sc-track: #EDECE9;
+  --d-sc-hv-thumb: #AEACA6;
   --d-sc-at-thumb: #808080;
 
   /* pagination */
@@ -165,9 +165,9 @@ body[data-theme='light']{
   --c-333-white: #333;
 
   /* sc */
-  --d-sc-thumb: #ccc;
-  --d-sc-track: #e9e9e9;
-  --d-sc-hv-thumb: #b6b6b6;
+  --d-sc-thumb: #D3D1CB;
+  --d-sc-track: #EDECE9;
+  --d-sc-hv-thumb: #AEACA6;
   --d-sc-at-thumb: #808080;
 
   /* pagination */
@@ -221,9 +221,9 @@ body[data-theme='dark']{
   --c-333-white: #fff;
 
   /* sc */
-  --d-sc-thumb: #686868;
-  --d-sc-track: #424242;
-  --d-sc-hv-thumb: #7b7b7b;
+  --d-sc-thumb: #474C50;
+  --d-sc-track: #272727;
+  --d-sc-hv-thumb: #585959;
   --d-sc-at-thumb: #b6b6b6;
 
   /* pagination */
@@ -759,7 +759,7 @@ background-color: rgba($color: $blackBg, $alpha: 0.65);
   &::-webkit-scrollbar { width: 10px;height:10px; }   
   &::-webkit-scrollbar-button { display: none; }   
   &::-webkit-scrollbar-track { background-color: $track; }  
-  &::-webkit-scrollbar-thumb { background: $thumb; border-radius:5px; } 
+  &::-webkit-scrollbar-thumb { background: $thumb;} 
   &::-webkit-scrollbar-thumb:hover { background: var(--d-sc-hv-thumb); } 
   &::-webkit-scrollbar-thumb:active { background: var(--d-sc-at-thumb); }
 }
